# universal-variable-solve

./: README.txt  functions  functions.py  poliastro-verity.py  pyproject.toml
api/: propagator.py
core/: Newton_Solve.py  __init__.py  coef.py
src/univ_prop/: __init__.py
src/univ_prop/api/: __init__.py  propagator.py
src/univ_prop/core/: __init__.py  coef.py  kepler.py
src/univ_prop/cpp/: coef.h  kepler.h  propagator.cpp  stumpff.h
src/univ_prop/include/: _newton.h  kepler.h  propagator.h
src/univ_prop/pyuniversal/: __init__.py  stumpff.py
src/univ_prop/src_/: _newton.cpp  coef.cpp  kepler.cpp  propagator.cpp  stumpff.cpp
tests/: test_accuracy.py  test_propagator.py
